--- a/features.conf
+++ b/features.conf
@@ -254,7 +254,7 @@ CONFIG_BITTORRENT=no
 # filters (path-based) will be allowed to be executed (and there are certain
 # other security barriers in place).
 #
-# Default: disabled, available if setenv() is found
+# Default: disabled, available if setenv() or putenv() is found
 
 CONFIG_CGI=no
 
@@ -602,5 +602,5 @@ CONFIG_BACKTRACE=yes
 CONFIG_NO_ROOT_EXEC=no
 
 
-# $Id: features.conf,v 1.34 2005/07/11 10:59:04 jonas Exp $
+# $Id: features.conf,v 1.35 2005/08/09 17:04:01 jonas Exp $
 # vim: filetype=sh textwidth=80
