--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.73 2005/05/20 05:18:13 miciah Exp $
+-- $Id: hooks.lua.in,v 1.74 2005/08/16 02:11:18 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -386,7 +386,7 @@ function mangle_blank_alt (url, html)
 
     if not mangle_blank_alt then return nil,nil end
 
-    html, n = gisub (html, '(<img.-) alt=""', '%1 alt="&nbsp;"')
+    html, n = gisub (html, '(<img[^>]-) alt=""', '%1 alt="&nbsp;"')
 
     return ((n > 0) and html), nil
 end
