Moved the document class to sm/document.*.

--- a/src/ecmascript/Makefile.am
+++ b/src/ecmascript/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.7 2005/09/13 22:20:04 pasky Exp $
+## $Id: Makefile.am,v 1.8 2005/09/13 22:28:05 pasky Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -9,6 +9,7 @@ INCLUDES += $(SPIDERMONKEY_CFLAGS)
 
 noinst_LIBRARIES = libecmascript.a
 libecmascript_a_LIBADD = \
+ spidermonkey/document.o \
  spidermonkey/form.o \
  spidermonkey/location.o \
  spidermonkey/window.o
