--- a/src/terminal/Makefile.am
+++ b/src/terminal/Makefile.am
@@ -1,11 +1,21 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.15 2005/09/14 12:32:49 zas Exp $
+## $Id: Makefile.am,v 1.16 2005/09/14 12:50:15 zas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+if CONFIG_MOUSE
+mouseobj = mouse.o
+endif
 
 EXTRA_DIST = TODO
 
 noinst_LIBRARIES = libterminal.a
+
+EXTRA_libterminal_a_SOURCES = \
+ mouse.c
+libterminal_a_LIBADD = \
+ $(mouseobj)
+
 libterminal_a_SOURCES = \
  color.c \
  color.h \
@@ -20,7 +30,6 @@ libterminal_a_SOURCES = \
  kbd.h \
  key.inc \
  mouse.h \
- mouse.c \
  palette.inc \
  screen.c \
  screen.h \
