--- a/src/ecmascript/Makefile.am
+++ b/src/ecmascript/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.8 2005/09/13 22:28:05 pasky Exp $
+## $Id: Makefile.am,v 1.9 2005/09/14 22:52:56 pasky Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -12,6 +12,7 @@ libecmascript_a_LIBADD = \
  spidermonkey/document.o \
  spidermonkey/form.o \
  spidermonkey/location.o \
+ spidermonkey/unibar.o \
  spidermonkey/window.o
 libecmascript_a_SOURCES = \
  ecmascript.c \
